src/test/deca/syntax/invalid/custom/if_nocpar.deca
{
if (true {
println("a string");
}
}